deployments/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: blockmesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: blockmesh-web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: blockmesh
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
